TestSuite/errors/err0039.pas
destructor Test;
begin
end;

begin

end.